--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             <div class="brand col-lg col-6"><img class=" col-lg-2" src="./images/Clients-3.png" alt=""></div>
             <div class="brand col-lg col-6"><img class=" col-lg-2" src="./images/Clients-4.png" alt=""></div>
             <div class="brand col-lg col-6"><img class=" col-lg-2" src="./images/clients-5.png" alt=""></div>
+            <div class="brand col-lg col-6"><img class=" col-lg-2" src="./images/Clients-2.png" alt=""></div>
           </div>
         </div>
       </div>
